snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
2f05ca4a21a862c17de7cd804130307f0d9c8049